// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TemurinArchiveTable component > renders correctly - Without checksum 1`] = `
<div>
  <div
    id="archive-list"
  >
    <table
      class="table table-borderless table-condensed archive-container"
      id="archive-table"
      style="border-spacing: 0 20px; border-collapse: separate;"
    >
      <tbody
        class="table-light"
      >
        <tr
          class="release-row"
        >
          <td
            class="text-white"
            style="background-color: rgb(51, 51, 51);"
          >
            <div>
              <a
                class="link-light"
                href="https://release_link_mock/"
              >
                <h2
                  class="pt-5"
                  style="font-size: 1.5rem;"
                >
                  release_name_mock
                </h2>
              </a>
              <svg
                data-placement="bottom"
                data-toggle="tooltip"
                fill="currentColor"
                height="30"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(83, 127, 185);"
                viewBox="0 0 24 24"
                width="30"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  This build is JCK certified
                </title>
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 1 3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
                />
              </svg>
              <a
                href="/aqavit"
              >
                <img
                  alt="AQAvit logo"
                  class="img-fluid"
                  data-placement="bottom"
                  data-toggle="tooltip"
                  src="/images/aqavit-icon.png"
                  title="This build is AQAvit Verified"
                  width="25"
                />
              </a>
              <h4
                class="pt-3 pb-3"
                style="font-size: .8rem;"
              >
                January 1, 2020
              </h4>
              <p>
                <a
                  class="link-light"
                  href="https://source_url_mock/"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                    />
                  </svg>
                   
                  Text
                </a>
              </p>
              <p>
                <a
                  class="link-light"
                  href="/temurin/release-notes?version=release_notes_name_mock"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0V0z"
                      fill="none"
                    />
                    <path
                      d="M3 18h12v-2H3v2zM3 6v2h18V6H3zm0 7h18v-2H3v2z"
                    />
                  </svg>
                   
                  Text
                </a>
              </p>
            </div>
          </td>
          <td>
            <table
              class="archive-platforms"
            >
              <tbody>
                <tr>
                  <td
                    class="fw-bold"
                  >
                    OS / Architecture
                  </td>
                  <td
                    class="fw-bold"
                    style="border-left: 1px solid rgb(221, 221, 221);"
                  >
                    Installer
                  </td>
                  <td
                    class="fw-bold"
                  >
                    SHA256
                  </td>
                  <td
                    class="fw-bold"
                    style="border-left: 1px solid rgb(221, 221, 221);"
                  >
                    Binary
                  </td>
                  <td
                    class="fw-bold"
                  >
                    SHA256
                  </td>
                </tr>
                <tr>
                  <td>
                    Os_mock architecture_mock
                  </td>
                  <td
                    style="border-left: 1px solid rgb(221, 221, 221); padding-left: 20px;"
                  >
                    <a
                      class="btn btn-primary"
                      href="/download"
                      state="[object Object]"
                      style="width: 9em;"
                    >
                      type_mock
                       
                    </a>
                  </td>
                  <td
                    style="padding-right: 20px;"
                  >
                    <a
                      data-bs-checksum="installer_checksum_mock"
                      data-bs-target="#checksumModal"
                      data-bs-toggle="modal"
                      href=""
                    >
                      Text
                    </a>
                  </td>
                  <td
                    style="border-left: 1px solid rgb(221, 221, 221); padding-left: 20px;"
                  >
                    <a
                      class="btn btn-primary"
                      href="/download"
                      state="[object Object]"
                      style="width: 9em;"
                    >
                      type_mock
                       
                      0 MB
                    </a>
                  </td>
                  <td>
                    Text
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root MuiPagination-text pt-3 d-flex justify-content-center css-1xra8g6-MuiPagination-root"
    >
      <ul
        class="MuiPagination-ul css-1c5o7vy-MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to first page"
            class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-disabled MuiPaginationItem-firstLast css-1l5xwdx-MuiButtonBase-root-MuiPaginationItem-root"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
              data-testid="FirstPageIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.41 16.59L13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-disabled MuiPaginationItem-previousNext css-1l5xwdx-MuiButtonBase-root-MuiPaginationItem-root"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
              data-testid="NavigateBeforeIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="page"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-selected MuiPaginationItem-page css-1l5xwdx-MuiButtonBase-root-MuiPaginationItem-root"
            tabindex="0"
            type="button"
          >
            1
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-disabled MuiPaginationItem-previousNext css-1l5xwdx-MuiButtonBase-root-MuiPaginationItem-root"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
              data-testid="NavigateNextIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-label="Go to last page"
            class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-disabled MuiPaginationItem-firstLast css-1l5xwdx-MuiButtonBase-root-MuiPaginationItem-root"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
              data-testid="LastPageIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M5.59 7.41L10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`TemurinArchiveTable component > renders correctly - no data 1`] = `
<div>
  <div
    id="archive-list"
  >
    <table
      class="table table-borderless table-condensed archive-container"
      id="archive-table"
      style="border-spacing: 0 20px; border-collapse: separate;"
    >
      <tbody
        class="table-light"
      >
        <tr />
      </tbody>
    </table>
  </div>
</div>
`;

exports[`TemurinArchiveTable component > renders correctly 1`] = `
<div>
  <div
    id="archive-list"
  >
    <table
      class="table table-borderless table-condensed archive-container"
      id="archive-table"
      style="border-spacing: 0 20px; border-collapse: separate;"
    >
      <tbody
        class="table-light"
      >
        <tr
          class="release-row"
        >
          <td
            class="text-white"
            style="background-color: rgb(51, 51, 51);"
          >
            <div>
              <a
                class="link-light"
                href="https://release_link_mock/"
              >
                <h2
                  class="pt-5"
                  style="font-size: 1.5rem;"
                >
                  release_name_mock
                </h2>
              </a>
              <svg
                data-placement="bottom"
                data-toggle="tooltip"
                fill="currentColor"
                height="30"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(83, 127, 185);"
                viewBox="0 0 24 24"
                width="30"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  This build is JCK certified
                </title>
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 1 3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
                />
              </svg>
              <a
                href="/aqavit"
              >
                <img
                  alt="AQAvit logo"
                  class="img-fluid"
                  data-placement="bottom"
                  data-toggle="tooltip"
                  src="/images/aqavit-icon.png"
                  title="This build is AQAvit Verified"
                  width="25"
                />
              </a>
              <h4
                class="pt-3 pb-3"
                style="font-size: .8rem;"
              >
                January 1, 2020
              </h4>
              <p>
                <a
                  class="link-light"
                  href="https://source_url_mock/"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                    />
                  </svg>
                   
                  Text
                </a>
              </p>
              <p>
                <a
                  class="link-light"
                  href="/temurin/release-notes?version=release_notes_name_mock"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0V0z"
                      fill="none"
                    />
                    <path
                      d="M3 18h12v-2H3v2zM3 6v2h18V6H3zm0 7h18v-2H3v2z"
                    />
                  </svg>
                   
                  Text
                </a>
              </p>
            </div>
          </td>
          <td>
            <table
              class="archive-platforms"
            >
              <tbody>
                <tr>
                  <td
                    class="fw-bold"
                  >
                    OS / Architecture
                  </td>
                  <td
                    class="fw-bold"
                    style="border-left: 1px solid rgb(221, 221, 221);"
                  >
                    Installer
                  </td>
                  <td
                    class="fw-bold"
                  >
                    SHA256
                  </td>
                  <td
                    class="fw-bold"
                    style="border-left: 1px solid rgb(221, 221, 221);"
                  >
                    Binary
                  </td>
                  <td
                    class="fw-bold"
                  >
                    SHA256
                  </td>
                </tr>
                <tr>
                  <td>
                    Os_mock architecture_mock
                  </td>
                  <td
                    style="border-left: 1px solid rgb(221, 221, 221); padding-left: 20px;"
                  >
                    <a
                      class="btn"
                      style="width: 9em; background-color: rgb(215, 222, 233);"
                    >
                      Text
                    </a>
                  </td>
                  <td
                    style="padding-right: 20px;"
                  >
                    Text
                  </td>
                  <td
                    style="border-left: 1px solid rgb(221, 221, 221); padding-left: 20px;"
                  >
                    <a
                      class="btn btn-primary"
                      href="/download"
                      state="[object Object]"
                      style="width: 9em;"
                    >
                      type_mock
                       
                      0 MB
                    </a>
                  </td>
                  <td>
                    <a
                      data-bs-checksum="checksum_mock"
                      data-bs-target="#checksumModal"
                      data-bs-toggle="modal"
                      href=""
                    >
                      Text
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="release-row"
        >
          <td
            class="text-white"
            style="background-color: rgb(51, 51, 51);"
          >
            <div>
              <a
                class="link-light"
                href="https://release_link_mock/"
              >
                <h2
                  class="pt-5"
                  style="font-size: 1.5rem;"
                >
                  release_name_mock
                </h2>
              </a>
              <svg
                data-placement="bottom"
                data-toggle="tooltip"
                fill="currentColor"
                height="30"
                stroke="currentColor"
                stroke-width="0"
                style="color: rgb(83, 127, 185);"
                viewBox="0 0 24 24"
                width="30"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  This build is JCK certified
                </title>
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 1 3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
                />
              </svg>
              <a
                href="/aqavit"
              >
                <img
                  alt="AQAvit logo"
                  class="img-fluid"
                  data-placement="bottom"
                  data-toggle="tooltip"
                  src="/images/aqavit-icon.png"
                  title="This build is AQAvit Verified"
                  width="25"
                />
              </a>
              <h4
                class="pt-3 pb-3"
                style="font-size: .8rem;"
              >
                January 1, 2020
              </h4>
              <p>
                <a
                  class="link-light"
                  href="https://source_url_mock/"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M216 0h80c13.3 0 24 10.7 24 24v168h87.7c17.8 0 26.7 21.5 14.1 34.1L269.7 378.3c-7.5 7.5-19.8 7.5-27.3 0L90.1 226.1c-12.6-12.6-3.7-34.1 14.1-34.1H192V24c0-13.3 10.7-24 24-24zm296 376v112c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V376c0-13.3 10.7-24 24-24h146.7l49 49c20.1 20.1 52.5 20.1 72.6 0l49-49H488c13.3 0 24 10.7 24 24zm-124 88c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20zm64 0c0-11-9-20-20-20s-20 9-20 20 9 20 20 20 20-9 20-20z"
                    />
                  </svg>
                   
                  Text
                </a>
              </p>
              <p>
                <a
                  class="link-light"
                  href="/temurin/release-notes?version=release_notes_name_mock"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0V0z"
                      fill="none"
                    />
                    <path
                      d="M3 18h12v-2H3v2zM3 6v2h18V6H3zm0 7h18v-2H3v2z"
                    />
                  </svg>
                   
                  Text
                </a>
              </p>
            </div>
          </td>
          <td>
            <table
              class="archive-platforms"
            >
              <tbody>
                <tr>
                  <td
                    class="fw-bold"
                  >
                    OS / Architecture
                  </td>
                  <td
                    class="fw-bold"
                    style="border-left: 1px solid rgb(221, 221, 221);"
                  >
                    Installer
                  </td>
                  <td
                    class="fw-bold"
                  >
                    SHA256
                  </td>
                  <td
                    class="fw-bold"
                    style="border-left: 1px solid rgb(221, 221, 221);"
                  >
                    Binary
                  </td>
                  <td
                    class="fw-bold"
                  >
                    SHA256
                  </td>
                </tr>
                <tr>
                  <td>
                    Os_mock architecture_mock
                  </td>
                  <td
                    style="border-left: 1px solid rgb(221, 221, 221); padding-left: 20px;"
                  >
                    <a
                      class="btn btn-primary"
                      href="/download"
                      state="[object Object]"
                      style="width: 9em;"
                    >
                      type_mock
                       
                    </a>
                  </td>
                  <td
                    style="padding-right: 20px;"
                  >
                    <a
                      data-bs-checksum="installer_checksum_mock"
                      data-bs-target="#checksumModal"
                      data-bs-toggle="modal"
                      href=""
                    >
                      Text
                    </a>
                  </td>
                  <td
                    style="border-left: 1px solid rgb(221, 221, 221); padding-left: 20px;"
                  >
                    <a
                      class="btn btn-primary"
                      href="/download"
                      state="[object Object]"
                      style="width: 9em;"
                    >
                      type_mock
                       
                      0 MB
                    </a>
                  </td>
                  <td>
                    <a
                      data-bs-checksum="checksum_mock"
                      data-bs-target="#checksumModal"
                      data-bs-toggle="modal"
                      href=""
                    >
                      Text
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root MuiPagination-text pt-3 d-flex justify-content-center css-1xra8g6-MuiPagination-root"
    >
      <ul
        class="MuiPagination-ul css-1c5o7vy-MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to first page"
            class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-disabled MuiPaginationItem-firstLast css-1l5xwdx-MuiButtonBase-root-MuiPaginationItem-root"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
              data-testid="FirstPageIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M18.41 16.59L13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-disabled MuiPaginationItem-previousNext css-1l5xwdx-MuiButtonBase-root-MuiPaginationItem-root"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
              data-testid="NavigateBeforeIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="page"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-selected MuiPaginationItem-page css-1l5xwdx-MuiButtonBase-root-MuiPaginationItem-root"
            tabindex="0"
            type="button"
          >
            1
          </button>
        </li>
        <li>
          <button
            aria-label="Go to page 2"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-page css-1l5xwdx-MuiButtonBase-root-MuiPaginationItem-root"
            tabindex="0"
            type="button"
          >
            2
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-previousNext css-1l5xwdx-MuiButtonBase-root-MuiPaginationItem-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
              data-testid="NavigateNextIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-label="Go to last page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-firstLast css-1l5xwdx-MuiButtonBase-root-MuiPaginationItem-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
              data-testid="LastPageIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M5.59 7.41L10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
